# lexify

./: .gitignore  README.md  classic.py  createCSV.py  create_csv.py  family.py  lexify.py  parse.py  pyproject.toml
cambridge/: args.py
lexify/: classic.py  family.py  lexify.py  parse.py
sources/: families_db.txt
src/: definitions.py  lexify.py
src/common/: lists.py  read_words.py
src/definitions/: definitions.py  read_words.py  search_definitions.py
src/families/: families.py  search_families.py
tests/: test_definitions.py
